<resources>
    <string name="app_name">Namoz va Qur\'on</string>
    <string name="navigation_drawer_open">Navigatsiya tortmachasini ochish </string>
    <string name="navigation_drawer_close">Navigatsiya tortmachasini yopish</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigatsiya sarlavhasi</string>
    <string name="action_settings">Sozlamalar</string>
    <string name="Background">fon</string>
    <string name="current_location">Hozirgi joylashuv</string>
    <string name="choose_location_manually">Joyni tanlash</string>
    <string name="internet_search">Internetdan qidirish</string>
    <string name="update_current_location">Joriy joylashuvni yangilash</string>
    <string name="adjust_current_location">Joriy joylashuvni sozlash</string>
    <string name="last_known_device_location">Oxirgi ma\'lum bo\'lgan joy</string>
    <string name="gps">GPS</string>
    <string name="the_network">Tarmoq</string>
    <string name="save">Saqlash</string>
    <string name="the_time_location">Vaqt joylashuvi</string>
    <string name="longitude">Uzunlik</string>
    <string name="latitude">Kenglik</string>
    <string name="choose_the_country">Mamlakatni tanlang</string>
    <string name="search">Qidirish</string>
    <string name="choose_the_city">Shaharni tanlang</string>
    <string name="stop">To\'xta</string>
    <string name="settings">Sozlamalar</string>
    <string name="convert_date">Taqvimni aylantirish</string>
    <string name="compass">Kompas</string>
    <string name="about_application">Ilova haqida</string>
    <string name="problems_and_suggestions">Muammolar va takliflar</string>
    <string name="locations">Joylar</string>
    <string name="share_application">Ilovani baham ko\'rish</string>
    <string name="hijri_month_1">Muharram</string>
    <string name="hijri_month_2">Safar</string>
    <string name="hijri_month_3">Rabiul Avval</string>
    <string name="hijri_month_4">Rabiul Oxir</string>
    <string name="hijri_month_5">Jumodul Avval</string>
    <string name="hijri_month_6">Jumo-dul Oxir</string>
    <string name="hijri_month_7">Rajab</string>
    <string name="hijri_month_8">Sha\'bon</string>
    <string name="hijri_month_9">Ramazon</string>
    <string name="hijri_month_10">Shavval</string>
    <string name="hijri_month_11">Zulqa\'da</string>
    <string name="hijri_month_12">Zul Hijja</string>
    <string name="gregorian_month_1">Yanvar</string>
    <string name="gregorian_month_2">Fevral</string>
    <string name="gregorian_month_3">Mart</string>
    <string name="gregorian_month_4">Aprel</string>
    <string name="gregorian_month_5">May</string>
    <string name="gregorian_month_6">Iyun</string>
    <string name="gregorian_month_7">Iyul</string>
    <string name="gregorian_month_8">Avgust</string>
    <string name="gregorian_month_9">Sentyabr</string>
    <string name="gregorian_month_10">Oktyabr</string>
    <string name="gregorian_month_11">Noyabr</string>
    <string name="gregorian_month_12">Dekabr</string>
    <string name="day_of_week1">Yakshanba</string>
    <string name="day_of_week2">Dushanba</string>
    <string name="day_of_week3">Seshanba</string>
    <string name="day_of_week4">Chorshanba</string>
    <string name="day_of_week5">Payshanba</string>
    <string name="day_of_week6">Juma</string>
    <string name="day_of_week7">Shanba</string>
    <string name="adjust_time_manually">Vaqtni sozlash</string>
    <string name="reset_time_settings">Vaqt sozlamalarini tiklash</string>
    <string name="activate_azan_notifications">Azon xabarnomalarini faollashtirish</string>
    <string name="activate_iqama_notifications">Iqoma bildirishnomalarini faollashtirish</string>
    <string name="choose_alarm_tone">Signal ohangini tanlash</string>
    <string name="prayer_time_settings">namoz vaqtini sozlash</string>
    <string name="saved_locations">Saqlangan joylar</string>
    <string name="remaining_time">Qolgan vaqt</string>
    <string name="add_location">Joylashuvni qo\'shish</string>
    <string-array name="prayer_time">
        <item>@string/fajr</item>
        <item>@string/sunrise</item>
        <item>@string/zuhr</item>
        <item>@string/asr</item>
        <item>@string/magrib</item>
        <item>@string/isha</item>
    </string-array>
    <string name="iqama_time">Iqoma vaqti</string>
    <string name="convert_from_hijri">Hijriydan aylantirish</string>
    <string name="convert_from_gregorian">Gregoriandan aylantirish</string>
    <string name="add_current_location">Joriy joylashuvni qo\'shish</string>
    <string name="choose_an_option">Variantni tanlash</string>
    <string name="delete_location">Joylashuvni o\'chirib tashlash</string>
    <string name="set_as_current_location">Joriy joylashuv sifatida o\'rnatish</string>
    <string name="MainActivtyMasjid_Toast">GPS o\'chirilgan, GPS-ni yoqing va ilovaga xizmatdan foydalanishga ruxsat bering. Yoki dastur to\'g\'ri ishlamaydi.</string>
    <string name="MainActivtyMasjid_builder">sayt menejeri</string>
    <string name="MainActivityMasjid_setMessage">Masjidni aniqlash vositasi ishlashi uchun GPS-quvvatlaydigan qurilma kerak.</string>
    <string name="MainActivityMasjid_Toast1">Veb-sayt topilmadi, iltimos veb-saytni yoqing va ilovaga veb-sayt va Internetdan foydalanishga ruxsat bering.</string>
    <string name="MainActivityMasjid_title394">Siz bu yerdasiz</string>
    <string name="MainActivityMasjid_395">Sizning oxirgi ro\'yxatdan o\'tgan saytingiz</string>
    <string name="MainActivityMasjid_Toast2">Internet aloqasi yo\'q, dastur to\'g\'ri ishlamaydi</string>
    <string name="MainActivityMasjid_Toast4">Sayt topilmadi, iltimos saytni yoqing va dasturga sayt va Internetdan foydalanishga ruxsat bering.</string>
    <string name="MainActivityMasjid_Toast6">Ma\'lumotlar serverdan olinmadi</string>
    <string name="MainActivityMasjid_Toast7">Ma\'lumotlar serverdan olinmadi</string>
    <string name="MainActivityMasjid_Toast8">Iltimos, internetni yoqing, aks holda dastur to\'g\'ri ishlamaydi.</string>
    <string name="app">Oz</string>
    <string name="kalibrovka">Agar u noto\'g\'ri bo\'lsa, tizimingizni sozlang</string>
    <string name="prayer_times_settings">Namoz vaqtlarini sozlash</string>
    <string name="hijri_settings">Hijriy sozlamalar</string>
    <string name="display_options">Displey parametrlari</string>
    <string name="notification_settings">Bildirishnoma sozlamalari</string>
    <string name="fajr_and_sahoor_alarm">Bomdod va Saharlik signallari</string>
    <string name="silent_settings">Tovushsiz sozlamalar</string>
    <string name="backup_and_restore">Zaxiralash va tiklash</string>
    <string name="settings_for_calculating_prayer_times">Namoz vaqtlarini hisoblash uchun sozlamalar</string>
    <string name="choose_hijri_date_settings">Hijriy sana sozlamalarini tanlash</string>
    <string name="change_language_and_colors_for_the_app_and_widgets">Ilova va vidjetlar uchun til va ranglarni o\'zgartirish</string>
    <string name="select_your_notifications_and_reminders_settings">Bildirishnomalar va eslatmalar sozlamalarini tanlash</string>
    <string name="fajr_and_sahoor_wake_up_alarm_settings">Bomdod va Saharlik signal sozlamalarini yoqish</string>
    <string name="adjust_the_silent_mode_settings_for_each_prayer">Har bir Namoz vaqtlari uchun \"jim rejim\" rejimini sozlash</string>
    <string name="settings_backup_and_restore">Sozlamalarni zaxiralash va tiklash</string>
    <string name="choose_display_language">Displey tilini tanlang</string>
    <string name="location_widget_details">Tafsilotlar va boshqa ma\'lumotlar:</string>
    <string name="prayer_notification">Namoz haqida xabar</string>
    <string name="iqama_reminders">Iqoma eslatmalari</string>
    <string name="general">Umumiy</string>
    <string name="settings_layouts_notifications_widget1">Namoz haqida xabar berish vaqtlari</string>
    <string name="settings_layouts_notifications_widget2">Xabar berish</string>
    <string name="settings_layouts_notifications_widget3">Bildirishnoma audio turi</string>
    <string name="settings_layouts_notifications_widget4">Namoz haqida xabar beruvchi ohang</string>
    <string name="settings_layouts_notifications_widget5">Bildirishnomani avtomatik ravishda tozalash</string>
    <string name="settings_layouts_notifications_widget6">Vaqtni tozalash</string>
    <string name="settings_layouts_notifications_widget7">Iqoma Vaqtlari</string>
    <string name="settings_layouts_notifications_widget8">Iqoma eslatmasi</string>
    <string name="settings_layouts_notifications_widget9">Eslatib o\'tamiz, audio turi</string>
    <string name="settings_layouts_notifications_widget10">Iqoma eslatuvchi ohang</string>
    <string name="settings_layouts_notifications_widget11">Eslatmani avtomatik ravishda tozalash</string>
    <string name="settings_layouts_notifications_widget12">Vaqtni tozalash</string>
    <string name="settings_layouts_notifications_widget13">Tebranish(vibr)</string>
    <string name="settings_layouts_notifications_widget14">LED xabarnomasi</string>
    <string name="settings_layouts_notifications_widget_details1">Har bir ibodat uchun ibodat haqida xabarni sozlash</string>
    <string name="settings_layouts_notifications_widget_details2">Namoz vaqti haqida xabarnoma</string>
    <string name="settings_layouts_notifications_widget_details3">Tizimdagi eslatma tovushini tanlash\nSessiz holatida xabar berish uchun signal turidan foydalaning</string>
    <string name="settings_layouts_notifications_widget_details4">Namoz haqida xabar berish ohangini tanlash</string>
    <string name="settings_layouts_notifications_widget_details5">Belgilangan vaqtdan keyin xabarnomani o\'chirib tashlash</string>
    <string name="settings_layouts_notifications_widget_details6">Bir necha daqiqadagi joriy qiymat:</string>
    <string name="settings_layouts_notifications_widget_details7">Har bir namoz uchun Iqoma eslatish sozlamalari</string>
    <string name="settings_layouts_notifications_widget_details8">Namoz boshlanish arafasida ekanligini eslang</string>
    <string name="remembrance">Kunlik duolar va Eslatmalar</string>
    <string name="tarjima">Tarjima</string>
    <string name="tasbeh_item_dr">Tasbeh</string>
    <string name="qibla_item_dr">Qibla</string>
    <string name="dowload_menu">Yuklash</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="location_not_ready">Joylashuv tayyor emas, tugmani yana bir marta bosing.</string>
    <string name="kun">Yorqin Mavzu</string>
    <string name="tun">Tun mavzu</string>
    <string name="masjidlar">Masjidlar</string>
    <string name="slide_4_title">Sozlamalar qulayligi</string>
    <string name="slide_4_desc">Ilovada 5 xil til,2 xil raqamli til,2 xil mavzu. bildirishnomalarni ohangni tanlash, o\'zgartirish mumkinligi</string>
    <string name="ID_ADS_COMPASS" translatable="false">ca-app-pub-3311803693724764/7219501580</string>
    <string name="qiroat">Qiroat</string>
    <string name="quran">Quran</string>
    <string name="duolar">Duolar</string>
    <string name="kitoblar_va_qur_on">Kitoblar va Qur\'on</string>
    <string name="namoz_kitobitr">Namoz Kitobi</string>
    <string name="kitab_alsalatr">Kitab Alsala</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="tilinitanlash" translatable="false">
        Tilingizni tanlash uchun\nTo choose your language\nKies jou taal\nلاختيار لغتك\nSizin dil seçmək üçün\nPour choisir votre langue\nPër të zgjedhur gjuhën tënde\nԸնտրել ձեր լեզուն\nЧтобы выбрать свой язык\nИнтихоб забони худ\nDilinizi seçmek için\nअपनी भाषा चुनने के लिए\nPer scegliere la lingua\nUntuk memilih bahasa Anda

    </string>
    <string name="allohning_99_ismlari">Allohning 99 ismlari</string>
</resources>