<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:src="@drawable/ic_round_settings_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_4_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_4_desc"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tilinitanlash"
        android:gravity="start"
        android:layout_below="@id/layoutDots"
        android:onClick="ShowGif"
        />
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="250dp"
        android:layout_height="310dp"
        android:src="@drawable/gif"
        android:layout_alignTop="@id/textd"
        android:layout_alignParentEnd="true"
        />


</RelativeLayout>