<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/size_activity_quran_ar_relative_layout"
    tools:context=".Activities.Gid"
    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dowload"
            android:onClick="download"
            /-->


        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/gif"
            />
            <TextView
                android:id="@+id/textd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tilinitanlash"
                android:gravity="start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:src="@drawable/gif"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/gif"
                />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_round_add_24"
            android:backgroundTint="@color/settings_widget_clicked"

            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="80dp"
            android:src="@drawable/ic_menu_share"
            android:backgroundTint="@color/widgetWhite"
            />
        <TextView
            android:id="@+id/sharetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/share"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="85dp"
            android:text="@string/share_application"
            android:textColor="@color/widgetWhite"
            android:background="@color/widgetBlack"
            android:padding="3dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dowload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="130dp"
            android:src="@drawable/ic_baseline_arrow_downward_24"
            android:backgroundTint="@color/widgetWhite"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/dowloadtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/dowload"
            app:layout_constraintRight_toLeftOf="@id/dowload"
            android:layout_marginEnd="10dp"
            android:text="@string/dowload_menu"
            android:textColor="@color/widgetWhite"
            android:background="@color/widgetBlack"
            android:padding="3dp"
            android:visibility="invisible"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/themeday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="180dp"
            android:src="@drawable/ic_baseline_wb_sunny_24"
            android:backgroundTint="@color/widgetWhite"
            />
        <TextView
            android:id="@+id/themedaytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/themeday"
            app:layout_constraintRight_toLeftOf="@id/themeday"
            android:layout_marginEnd="10dp"
            android:text="@string/kun"
            android:textColor="@color/widgetWhite"
            android:background="@color/widgetBlack"
            android:padding="3dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/themenight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="230dp"
            android:src="@drawable/ic_baseline_brightness_3_24"
            android:backgroundTint="@color/widgetWhite"
            />
        <TextView
            android:id="@+id/themenighttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/themenight"
            app:layout_constraintRight_toLeftOf="@id/themenight"
            android:layout_marginEnd="10dp"
            android:text="@string/tun"
            android:textColor="@color/widgetWhite"
            android:background="@color/widgetBlack"
            android:padding="3dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
